--- a/custom/particleEffect.css
+++ b/custom/particleEffect.css
@@ -1,7 +1,7 @@
 html, body, #app {
     height: 100%;
 }
-#app {
+.theme-container {
     /* background: linear-gradient(to top, palevioletred 0%, #fff 100%); */
     background: no-repeat linear-gradient(to bottom, #011a39 0%, #009d7f 100%);
 }
@@ -13,8 +13,7 @@ html, body, #app {
 }
 #canvas {
     position: absolute;
-    height: calc(100% - 60px);
-    margin-top: 60px;
+    height: 100%;
     width: 100%;
     top: 0;
     left: 0;
