--- a/custom/particleEffect.css
+++ b/custom/particleEffect.css
@@ -1,9 +1,18 @@
 html, body, #app {
     height: 100%;
 }
-.theme-container {
+p,h1,h2,h3,h4,h5,h6,code,span, ul li:not(.dropdown-item), ol li:not(.dropdown-item),a {
+    color: #ddd !important;
+}
+.theme-container,.sidebar, .navbar,.nav-dropdown, .search-box input, .suggestion {
     /* background: linear-gradient(to top, palevioletred 0%, #fff 100%); */
     background: no-repeat linear-gradient(to bottom, #011a39 0%, #009d7f 100%);
+}
+.navbar .links {
+    background-color: transparent;
+}
+.search-box input::placeholder {
+    color: #ddd !important;
 }
 .home {
     padding: 3rem 2rem 0;
